syntax = "proto3";
package v1;
option go_package = "pkg/api/v1";

import "google/protobuf/timestamp.proto";

message ChatMessage {
  string user_id = 1;
  google.protobuf.Timestamp created_at = 2;
  MessageType.Enum type = 3;
  string username = 4;
  MessageText text = 5;
  MessageAward award = 6;
  MessageDonation donation = 7;
  MessageAudio audio = 8;
  string id = 9;
}

message MessageType {
  enum Enum {
    TEXT = 0;
    AWARD = 1;
    DONATION = 2;
    AUDIO = 3;
  }
}

message MessageText { string content = 1; }

message MessageAward { string award_id = 1; }

message MessageDonation { int64 amount = 1; }

message MessageAudio { bytes bytes = 1; }

message ListenForMessagesRequest { string channel = 1; }

message GetMessagesRequest {
  string channel = 1;
  int64 offset = 2;
}
message GetMessagesResponse {
  repeated ChatMessage messages = 1;
  bool has_more = 2;
}

message SendMessageRequest {
  string channel = 1;
  string content = 2;
  string username = 3;
}

message SendAwardRequest {
  string channel = 1;
  string award_id = 2;
  string username = 3;
}

message SendDonationRequest {
  string channel = 1;
  int64 amount = 2;
  string username = 3;
}

message SendAudioRequest {
  string channel = 1;
  bytes audio = 2;
  string username = 3;
}

message CreateRoomRequest {
  string name = 1;
  string description = 2;
  Visibility.Enum visibility = 3;
  repeated string allowed_list_ids = 4;
  int64 price = 5;
  RoomType.Enum room_type = 6;
}

message RoomType {
  enum Enum {
    FREE = 0;
    PAID = 1;
    SUBSCRIPTION_MONTHLY = 2;
  }
}

message Visibility {
  enum Enum {
    PUBLIC = 0;
    PRIVATE = 1;
  }
}
message Room {
  string name = 1;
  string description = 2;
  string id = 3;
  string owner = 4;
  google.protobuf.Timestamp created_at = 5;
  int32 rank = 6;
  repeated string allowed_list_ids = 7;
  Visibility.Enum visibility = 8;
  int64 price = 9;
  int64 active_users = 10;
  RoomType.Enum room_type = 11;
  string product_id = 12;
}

message List {
  string id = 1;
  string name = 2;
  string owner_user_id = 3;
  map<string, string> allowed_users = 4;
}

message CreateListRequest {
  string name = 1;
  map<string, string> allowed_users = 2;
}

message UpdateListRequest {
  string id = 1;
  string name = 2;
  map<string, string> allowed_users = 3;
}

message GetUserSuggestionsRequest { string query = 1; }

message GetUserSuggestionsResponse { repeated UserSuggestion users = 1; }

message UserSuggestion {
  string id = 1;
  string username = 2;
}

message GetAllListsResponse { repeated List lists = 1; }

message GetListByIDRequest { string id = 1; }

message RoomAccessCheckRequest { string room_id = 1; }
message RoomAccessCheckResponse { RoomAuthorization.Enum authorization = 1; }

message RoomAuthorization {
  enum Enum {
    AUTHORIZED = 0;
    NEED_TO_PAY = 1;
    UNJOINABLE = 2;
    NEED_TO_SUBSCRIBE = 3;
  }
}

message ChatUser {
  string id = 1;
  string username = 2;
  string image_url = 3;
}

message Conversation {
  string id = 1;
  map<string, ConversationParticipant> participants = 2;
  google.protobuf.Timestamp created_at = 3;
  int64 unread_messages_count = 4;
  ChatMessage last_message = 5;
}

message ConversationParticipant {
  string user_id = 1;
  string username = 2;
  google.protobuf.Timestamp joined_at = 3;
}

message CreateConversationRequest { string participant_username = 1; }

message CreateConversationResponse { Conversation conversation = 1; }

message GetConversationRequest { string conversation_id = 1; }

message GetConversationResponse { Conversation conversation = 1; }

message GetConversationsRequest { string conversation_id = 1; }

message GetConversationsResponse { repeated Conversation conversations = 1; }

message GetConversationWithParticipantsRequest { repeated string user_ids = 1; }

message GetConversationWithParticipantsResponse {
  Conversation conversation = 1;
  bool found = 2;
}